[gd_scene load_steps=46 format=3 uid="uid://cwpg2sneyq6rf"]

[ext_resource type="Script" path="res://scenes/player2.gd" id="2_4v3kc"]
[ext_resource type="PackedScene" uid="uid://otpk2la1v2fx" path="res://scenes/fireball.tscn" id="2_6k01a"]
[ext_resource type="Texture2D" uid="uid://3mct11p4wljk" path="res://assets/sprites/gun.png" id="3_3jk44"]
[ext_resource type="Texture2D" uid="uid://b1yb4ritr43ln" path="res://assets/sprites/henrik_character.png" id="4_w61uu"]
[ext_resource type="Texture2D" uid="uid://ci08ml0oa3bwy" path="res://assets/sprites/tabea_character.png" id="6_yb7nj"]
[ext_resource type="Texture2D" uid="uid://bj5hhccpglyw2" path="res://assets/sprites/Yellow Effect Bullet Impact Explosion 32x32.png" id="8_yc7uu"]
[ext_resource type="AudioStream" uid="uid://chuffcyfsuoaw" path="res://assets/sounds/gunshot1.mp3" id="9_18wnd"]
[ext_resource type="AudioStream" uid="uid://drpcu2tosj3w1" path="res://assets/sounds/reload.mp3" id="10_ihl8k"]
[ext_resource type="AudioStream" uid="uid://qviyd0m41myi" path="res://assets/sounds/jump.wav" id="11_leqsl"]
[ext_resource type="AudioStream" uid="uid://dndpmwhse8g6a" path="res://assets/sounds/unsere_sounds/au_female.wav" id="12_l0hls"]
[ext_resource type="AudioStream" uid="uid://ddex2h6d26ps0" path="res://assets/sounds/wah-wah-sad-trombone-6347.mp3" id="12_ubx1b"]
[ext_resource type="AudioStream" uid="uid://cc1i10rmpg0b3" path="res://assets/sounds/unsere_sounds/ups_female.wav" id="13_13ory"]
[ext_resource type="AudioStream" uid="uid://6xf3ioycb7gh" path="res://assets/sounds/unsere_sounds/ahh_female.wav" id="14_wi2bs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6nnpq"]
atlas = ExtResource("3_3jk44")
region = Rect2(0, 0, 430, 116)

[sub_resource type="SpriteFrames" id="SpriteFrames_blndo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nnpq")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e3sfn"]
atlas = ExtResource("4_w61uu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmrgn"]
atlas = ExtResource("4_w61uu")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljkcs"]
atlas = ExtResource("4_w61uu")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov8wg"]
atlas = ExtResource("4_w61uu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxx7g"]
atlas = ExtResource("4_w61uu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxovv"]
atlas = ExtResource("4_w61uu")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xyg3"]
atlas = ExtResource("6_yb7nj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcw42"]
atlas = ExtResource("6_yb7nj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c6gw"]
atlas = ExtResource("6_yb7nj")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf24u"]
atlas = ExtResource("6_yb7nj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc1md"]
atlas = ExtResource("6_yb7nj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i24iu"]
atlas = ExtResource("6_yb7nj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_b1ngt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3sfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmrgn")
}],
"loop": true,
"name": &"henrik",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljkcs")
}],
"loop": true,
"name": &"henrik_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov8wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxx7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxovv")
}],
"loop": true,
"name": &"henrik_walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xyg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcw42")
}],
"loop": true,
"name": &"tabea",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c6gw")
}],
"loop": true,
"name": &"tabea_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf24u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc1md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i24iu")
}],
"loop": true,
"name": &"tabea_walking",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_ml0lq"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lk4my"]
radius = 6.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yd2fh"]
atlas = ExtResource("8_yc7uu")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ncvg"]
atlas = ExtResource("8_yc7uu")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujk8m"]
atlas = ExtResource("8_yc7uu")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0odn"]
atlas = ExtResource("8_yc7uu")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5a7h"]
atlas = ExtResource("8_yc7uu")
region = Rect2(352, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdig5"]
atlas = ExtResource("8_yc7uu")
region = Rect2(384, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjmde"]
atlas = ExtResource("8_yc7uu")
region = Rect2(416, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi2xd"]
atlas = ExtResource("8_yc7uu")
region = Rect2(448, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr0e0"]
atlas = ExtResource("8_yc7uu")
region = Rect2(352, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1kt2"]
atlas = ExtResource("8_yc7uu")
region = Rect2(384, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh6xe"]
atlas = ExtResource("8_yc7uu")
region = Rect2(416, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w8gr"]
atlas = ExtResource("8_yc7uu")
region = Rect2(448, 320, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vljtw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd2fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ncvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujk8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0odn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5a7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdig5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjmde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi2xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr0e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1kt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh6xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w8gr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_flaih"]
streams_count = 3
stream_0/stream = ExtResource("12_l0hls")
stream_0/weight = 1.0
stream_1/stream = ExtResource("13_13ory")
stream_1/weight = 1.0
stream_2/stream = ExtResource("14_wi2bs")
stream_2/weight = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7mvk"]
size = Vector2(10, 36)

[node name="Player2" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("2_4v3kc")
projectilePrefab = ExtResource("2_6k01a")

[node name="Gun" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(15, -25)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_blndo")
frame_progress = 0.720444

[node name="Character" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -29)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_b1ngt")
animation = &"tabea_walking"
script = SubResource("GDScript_ml0lq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -25)
shape = SubResource("CapsuleShape2D_lk4my")

[node name="FireEffect" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(40, -29)
scale = Vector2(0.375, 0.375)
sprite_frames = SubResource("SpriteFrames_vljtw")
frame = 1
frame_progress = 0.604441

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_18wnd")
volume_db = -5.0

[node name="reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ihl8k")

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_leqsl")

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
z_index = 5
stream = ExtResource("12_ubx1b")
volume_db = 12.0
pitch_scale = 2.38

[node name="damage_sound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_flaih")
volume_db = 19.945
pitch_scale = 1.01

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -26)
shape = SubResource("RectangleShape2D_q7mvk")

[node name="DoubleShotTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="ready" from="Character" to="." method="_on_character_ready"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="DoubleShotTimer" to="." method="_on_double_shot_timer_timeout"]
